# tsc-trace

./: Cargo.toml  LICENSE  README.md
benches/: bench.rs
src/: lib.rs  main.rs
viewer/: Cargo.toml  config.js  tag_names.js
viewer/src/: Main.rs  config.rs
