[package]
name = "tsc-trace"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
capacity_1_million = []
capacity_8_million = []
capacity_16_million = []
capacity_32_million = []
capacity_64_million = []
off = []
lfence = []

[dependencies]
bytemuck = "1.13.1"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false