[package]
name = "tsc-trace"
version = "0.6.0"
edition = "2021"
license = "MIT"
description = "low overhead tracing of rust code using time stamp counter (x86 rdtsc)"
homepage = "https://github.com/koeninger/tsc-trace"
repository = "https://github.com/koeninger/tsc-trace"
readme = "README.md"
keywords = ["tracing", "profiling", "debugging"]
categories = ["development-tools::debugging", "development-tools::profiling"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
capacity_1_million = []
capacity_8_million = []
capacity_16_million = []
capacity_32_million = []
capacity_64_million = []
off = []
lfence = []
const_array = []

[dependencies]
bytemuck = "1.13.1"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false
