[package]
name = "tsc-trace-viewer"
version = "0.6.0"
edition = "2021"
license = "MIT"
description = "viewer for binary output of tsc-trace"

[dependencies]
config = {version = "0.14.0", features = ["json5"]}
bytemuck = {version = "1.16.0", features = ["derive"]}
sdl2 = {version = "0.36.0", features = ["ttf"]}
serde = "1.0.204"
